--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,26 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="index.css" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    <div id = "main_1">
+        <div id ="purple"></div>
+        <div id = "green"></div>
+        <div id = "circle"></div>
+    </div>
+    <div id = "main_2">
+        <div id ="big_rectangle"></div>
+    </div>
+    <div id = "main_3">
+        <div id = "white_box">
+            <div id="top_text"><p>H E L L O</p></div>
+            <div><p>F R I E N D S</p></div>
+        </div>
+    </div>
+</body>
+</html>
