--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,30 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="reset.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    <div id="grey_header">
+        <div id="blue_box"></div>
+    </div>
+    <div id="white_text">
+        <p>     Consider typing a whole lot of useless text and then copying it over again.
+                Consider typing a whole lot of useless text and then copying it over again.
+                Consider typing a whole lot of useless text and then copying it over again.
+                Consider typing a whole lot of useless text and then copying it over again.
+                Consider typing a whole lot of useless text and then copying it over again.
+                Consider typing a whole lot of useless text and then copying it over again.
+                Consider typing a whole lot of useless text and then copying it over again.
+        </p>
+    </div>
+    <div id="blue_bar"></div>
+    <div id="aqua_bar"></div>
+    <div id="yellow_green_bar"></div>
+    <div id="yellow_bar"></div>
+</body>
+</html>
